restructure the package